# recruit-ink-ai

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yaml
api/: config.py  main.py
api/lib/: helpers.py
api/models/: candidate.py  jobs.py  screening_question.py
api/routers/: applications.py
api/services/: applications_service.py  base_service.py  jobs_service.py  resume_service.py
api/tests/: screen_request_sample.json
