[tool.poetry]
name = "recruit-ink-ai"
version = "0.1.0"
description = ""
authors = ["Aren Hovsepyan <ar.hovsepyan2011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langsmith = "^0.3.8"
langchain-openai = "^0.3.6"
python-dotenv = "^1.0.1"
fastapi = {extras = ["standard"], version = "^0.115.8"}
black = "^25.1.0"
python-multipart = "^0.0.20"
langchain-community = "^0.3.18"
pdfminer-six = "^20240706"
pypdf2 = "^3.0.1"
langchain-xai = "^0.2.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
